--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -1,12 +1,12 @@
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8">    
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <link rel="stylesheet" href="CSS/HomepageNav.css">
-  <link href="CSS/homepage.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link href="CSS/aboutus.css" rel="stylesheet" type="text/css">
   <link href="CSS/Footer.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
   
   <title>Home</title><!-- REPLACE title as what u want -->
 </head>
-<body style="background-color: #FFFFF0;">
+<body style="background-color: #fff;">
       <nav>
           <input type="checkbox" id="check">
           <label for="check" class="checkboxbutton">
@@ -34,8 +34,16 @@
             <li><a href="#" class="navbutton">Book now</a></li>
             </ul>
       </nav>
-      <article>
-        
+      <header>
+        <div class="Header">
+            <h1 class="Title">About Us</h1>
+            <img src="ImageNVideo/wallpaperflare.com_wallpaper.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+        </div>
+        <img src="ImageNVideo/line break hotel website edited.jpg" class="linebreak">
+      </header>
+      <article class="missionary">
+        <h1>Our Mission</h1>
+        <p>At Luxury Resort, we believe in providing our guests with an unforgettable experience of luxury and relaxation. Nestled in the heart of a pristine natural landscape, our resort offers a perfect blend of modern amenities and serene surroundings.</p>
       </article>
 <footer>
   <div class="section1_footer">
