--- a/UX Offical/FReservation.html
+++ b/UX Offical/FReservation.html
@@ -1,10 +1,44 @@
 <!doctype html>
+
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
-<link rel="stylesheet" href="FReservation.css">
-<Title>Reservation</Title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <title>Try reactive 1</title>
+  <script src="check_date.js"></script>
+  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/Footer.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/Facilities.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
+  <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+  
+  <title>Facilities Reservation</title><!-- REPLACE title as what u want -->
 </head>
+<body style="background-color: #FFFFFF;">
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkboxbutton">
+            <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
+        </label>
+        <label class ="logo">The logo here</label>
+        <ul>
+            <li><a class="colorchange" href="Homepage.html">Home</a></li>
+            <li><a class="colorchange" href="about us.html">about</a></li>
+            <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
+            <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
+            <li><a class="colorchange" href="Facilities.html">facilities</a></li>
+            <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
+        </ul>
+    </nav>
 <body>
     <form method="get">
         <fieldset>
