--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -85,9 +85,9 @@
         
         <img src="ImageNVideo/weddingImg.jpg" style="width: 100%;">
         <div class="minicontainer">
-          <h3><b>Wedding services</b></h3> 
+          <h3 style="color: black;"><b>Wedding services</b></h3> 
           <hr>
-          <p>Click to find out more</p> 
+          <p style="color: black;">Click to find out more</p> 
         </a>
         </div>
     </div>
@@ -95,9 +95,9 @@
       <a href="Eventspage2.html">
       <img src="ImageNVideo/concertImg.jpg" style="width: 100%;">
       <div class="minicontainer">
-        <h3><b>Hosting concerts and parties</b></h3> 
+        <h3 style="color: black;"><b>Hosting concerts and parties</b></h3> 
           <hr>
-          <p>Click to find out more</p> 
+          <p style="color: black;">Click to find out more</p> 
       </div>
       </a>
       </div>
