--- a/UX Offical/Facilities.html
+++ b/UX Offical/Facilities.html
@@ -35,7 +35,7 @@
             <li><a class="colorchange" href="about us.html">about</a></li>
             <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
             <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
-            <li><a class="colorchange" href="#">facilities</a></li>
+            <li><a class="colorchange" href="Facilities.html">facilities</a></li>
             <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
         </ul>
     </nav> 
