--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -30,7 +30,7 @@
             <li><a class="colorchange" href="about us.html">about</a></li>
             <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
             <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
-            <li><a class="colorchange" href="#">facilities</a></li>
+            <li><a class="colorchange" href="Facilities.html">facilities</a></li>
             <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
             </ul>
       </nav>
