--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
   <meta charset="UTF-8">    
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Try reactive 1</title>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
   <link href="CSS/aboutus.css" rel="stylesheet" type="text/css">
   <link href="CSS/Footer.css" rel="stylesheet" type="text/css">
@@ -15,11 +15,24 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <style>
+    @font-face {
+        font-family: opensans;
+        src: url(TTF/Cinzel/static/Cinzel-Bold.ttf)
+        format(truetype);
+    }
+
+    .ourmission {
+        font-family: opensans;
+        font-size: 70px;
+        padding-bottom: 5px;
+    }
+  </style>
   
   <title>Home</title><!-- REPLACE title as what u want -->
-</head>
-<body style="background-color: #fff;">
-      <nav>
+    </head>
+    <body style="background-color: #fff;">
+      <nav> 
           <input type="checkbox" id="check">
           <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
@@ -35,25 +48,28 @@
             </ul>
       </nav>
       <header>
+
         <div class="Header">
             <h1 class="Title">About Us</h1>
             <img src="ImageNVideo/wallpaperflare.com_wallpaper.jpg" class="HeaderIMG" style="aspect-ratio:900/506; width:100%; max-height:60vh;">
+            <img src="ImageNVideo/line break hotel website edited.jpg" class="linebreak">
         </div>
-        <img src="ImageNVideo/line break hotel website edited.jpg" class="linebreak">
+
       </header>
       <article class="missionary">
-        <h1>Our Mission</h1>
+        <h1 class="ourmission">Our Mission</h1>
+        <hr class="gapline">
         <p>At Luxury Resort, we believe in providing our guests with an unforgettable experience of luxury and relaxation. Nestled in the heart of a pristine natural landscape, our resort offers a perfect blend of modern amenities and serene surroundings.</p>
       </article>
-<footer>
+        <footer>
   <div class="section1_footer">
     <div class="part1footerleft">
         <div class="insidepart1">
             <h1 class="title">Contact Us</h1>
             <div class="contact_container">
             <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
-            <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
-            <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+            <a href="" class="contactlinks"><p class="contacttextfirst">FAQs</p></a>
+            <a href="" class="contactlinks"><p class="contacttextfirst">Contact Us</p></a>
             </div>
         </div> 
     </div>
@@ -74,6 +90,6 @@
   <div class="part2footer">
       <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
   </div>
-</footer>
-</body>
+        </footer>
+    </body>
 </html>
