--- a/UX Offical/FReservation.html
+++ b/UX Offical/FReservation.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="CSS/Facilities.css">
+  <link rel="stylesheet" href="CSS/FReservation.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
   <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
@@ -40,6 +40,9 @@
         </ul>
     </nav>
 <body>
+    <br><br>
+
+    <div class="formdiv">
     <form method="get">
         <fieldset>
             <legend>Facilities Reservation</legend>
@@ -68,11 +71,48 @@
             <br>
             <input type="date" id="Date" placeholder="Date" name="date" title="date" required/>
             <br><br><br>
+            <input type="submit" value="submit"></input>
+            <br><br><br>
         </fieldset>
         <br>
-        <input type="submit" value="submit"></input>
+        
 
 
     </form>
+    </div>
+
+<br><br>
 
 </body>
+<footer>
+    <div class="section1_footer">
+      <div class="part1footerleft">
+          <div class="insidepart1">
+              <h1 class="title">Contact Us</h1>
+              <div class="contact_container">
+              <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+              <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+              <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+              </div>
+          </div> 
+      </div>
+
+      <div class="part1footerright">
+          <div class="insidepart1">
+              <h1 class="title">Socials</h1>
+              <div class="socialicon_container">
+                <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
+              <!-- <a href="https://vt.tiktok.com/ZSLjpVJJf/" class="mainsocialmedia"><img src="images/edited/Tiktok.jpg" alt="" class="socialmediaicon"></a> -->
+              </div>  
+          </div>
+      </div>
+    </div>
+
+    <div class="part2footer">
+        <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+    </div>
+</footer>
+</body>
+</html>
