--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -59,7 +59,21 @@
       <article class="missionary">
         <h1 class="ourmission">Our Mission</h1>
         <hr class="gapline">
-        <p>At Luxury Resort, we believe in providing our guests with an unforgettable experience of luxury and relaxation. Nestled in the heart of a pristine natural landscape, our resort offers a perfect blend of modern amenities and serene surroundings.</p>
+        <p class="ourdescription">
+            At Luxury Resort, we believe in providing our guests with an unforgettable experience of luxury and relaxation. Nestled in the heart of a pristine natural landscape, our resort offers a perfect blend of modern amenities and serene surroundings.
+        </p>
+      </article>
+      <article>
+        <h2>Our Commitment to Excellence</h2>
+        <p>
+            Impeccable Service: Our dedicated staff is committed to providing exceptional service and ensuring that every guest feels pampered and well taken care of. From the moment you arrive until the time you depart, our team is here to cater to your every need.
+            <br>
+            Luxurious Accommodations: Our resort boasts a range of luxurious accommodations, from spacious suites to private villas. Each room is elegantly designed and equipped with state-of-the-art amenities to ensure your comfort and relaxation.
+            <br>
+            Culinary Delights: Indulge your taste buds at our world-class restaurants, where our talented chefs create exquisite dishes using the finest ingredients. From international cuisine to local specialties, our diverse dining options are sure to satisfy even the most discerning palate.
+            <br>
+            Relaxation and Recreation: Unwind and rejuvenate at our luxurious spa, where you can indulge in a variety of treatments and therapies. For those seeking adventure, our resort offers a range of recreational activities, including swimming, tennis, bowling, and more.
+        </p>
       </article>
         <footer>
   <div class="section1_footer">
