--- a/UX Offical/Facilities.html
+++ b/UX Offical/Facilities.html
@@ -19,8 +19,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
 
-  
   <title>Facilities</title><!-- REPLACE title as what u want -->
 </head>
 <body style="background-color: #FFFFFF;">
@@ -58,7 +60,7 @@
     <div id="border">
         <img id='spa' src="ImageNVideo/spa.jpg">
         <div id ="textpic">
-            <h2>Reza Spa</h2>
+            <h1>Reza Spa</h1>
             <br>
             <p>Reza Spa is a haven of tranquility and rejuvenation nestled within a breathtaking natural landscape. This personalized resort hotel spa is a sanctuary designed to cater to your every need, offering an unparalleled experience of relaxation and wellness. From the moment you step foot into Reza Spa, you are enveloped in an atmosphere of serenity, with elegant interiors and warm, attentive staff who are dedicated to ensuring your utmost comfort. </p>
             <br>
@@ -68,7 +70,7 @@
     <div id="border">
         <img id='jac'src="ImageNVideo/jacuzzi.jpg">
         <div id="textpic">
-            <h2>Jacuzzi</h2>
+            <h1>Jacuzzi</h1>
             <br>
             <p>Reza Resort boasts a magnificent, personalized pool and jacuzzi area that embodies the epitome of relaxation and luxury. Surrounded by lush greenery and breathtaking views, this exquisite oasis is designed to provide guests with an unparalleled experience of serenity and indulgence.</p>
             <br>
@@ -78,7 +80,7 @@
     <div id="border">
         <img id='gym' src="ImageNVideo/gym7.jpg">
         <div id="textpic">
-            <h2>Reza Fitness</h2>
+            <h1>Reza Fitness</h1>
             <br>
             <p>Reza Fitness is an exclusive resort hotel gym that redefines the concept of personalized fitness experiences. Nestled within a picturesque setting, this state-of-the-art facility is dedicated to helping you achieve your fitness goals while providing a luxurious and inviting atmosphere.</p>
             <br>
