--- a/UX Offical/Facilities.html
+++ b/UX Offical/Facilities.html
@@ -7,21 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Try reactive 1</title>
-  <script src="check_date.js"></script>
   <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/Facilities.css">
   <link rel="stylesheet" href="CSS/Footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="CSS/Facilities.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
-  <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css%22%3E">
 
   <title>Facilities</title><!-- REPLACE title as what u want -->
 </head>
@@ -119,5 +112,6 @@
         <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
     </div>
 </footer>
+<script src="JS/Resturant.js"></script>
 </body>
 </html>
