--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -24,7 +24,7 @@
           <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
           </label>
-          <label class ="logo">The logo here</label>
+          <label class ="logo">Reza Resorts</label>
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="about us.html">about</a></li>
@@ -61,11 +61,12 @@
  
   
   <div class="aboutus">
-      <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px; font-family: 'Playfair Display', serif;">About us</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standar dummy text ever
-       since the 1500s, when an unknown printer took a galley of type 
-       and scrambled it to make a type specimen book. 
-      rsions of Lorem Ipsum.<br><br>
+      <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px; font-family: 'Playfair Display', serif;">About us</strong><br><br><br>
+      At Reza Resort, our mission is to provide you with an escape from the ordinary and
+      immerse you in a world of relaxation and exploration. Whether you seek a romantic getaway, 
+      a family adventure, or a corporate retreat, our diverse range of accommodations and 
+      activities cater to all your desires.
+      <br><br>
       <button class="button"><a href="">
         Learn more
       </button>
@@ -113,11 +114,10 @@
     </div>
   </div>
   <div class="Dining">
-    <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px; font-family: 'Playfair Display', serif;">Dining</strong><br><br><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    Lorem Ipsum has been the industry's standar dummy text ever
-     since the 1500s, when an unknown printer took a galley of type 
-     and scrambled it to make a type specimen book. 
-    rsions of Lorem Ipsum.<br><br>
+    <p class="paragraph"><strong style="font-size: 40px;;border-left: 3px solid #FF9F00;padding-left: 15px; font-family: 'Playfair Display', serif;">Dining</strong><br><br><br>
+      Indulge in a culinary journey like no other at our resort's dining venues, where every meal is an unforgettable 
+      experience. From the moment you step into our elegant restaurants, you'll be captivated by the enchanting ambiance 
+      and warm hospitality.<br><br>
     <button class="button"><a href="ResturantPage.html">
       Learn more
     </button>
