--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -24,7 +24,9 @@
           <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
           </label>
+          <a href="Homepage.html">
           <label class ="logo">Reza Resorts</label>
+        </a>
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="about us.html">about</a></li>
@@ -133,9 +135,9 @@
         <div class="insidepart1">
             <h1 class="title">Contact Us</h1>
             <div class="contact_container">
-            <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
-            <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
-            <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+            <a href="about us.html" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+            <a href="about us.html" class="contactlinks"><p class="contacttext">FAQs</p></a>
+            <a href="about us.html" class="contactlinks"><p class="contacttext">Contact Us</p></a>
             </div>
         </div> 
     </div>
