--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -24,7 +24,7 @@
           <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
           </label>
-          <a href="Homepage.html">
+          <a href="Homepage.html" class="tryhover">
           <label class ="logo">Reza Resorts</label>
         </a>
           <ul>
