--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -17,18 +17,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
   <style>
     @font-face {
-        font-family: Cinzel;
-        src: url(TTF/Cinzel/static/Cinzel-Bold.ttf)
-        format(truetype);
-    }
-    @font-face {
         font-family: Playfair;
         src: url(TTF/Cinzel/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf)
         format(truetype);
     }
 
     .ourmission {
-        font-family: cinzel;
+        font-family: Playfair;
         font-size: 70px;
         padding-bottom: 5px;
     }
@@ -36,7 +31,10 @@
     .main h3{
         font-family: Playfair;
         font-weight: 500;
-    }   
+    }
+    .ourdescription{
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
   </style>
   
   <title>Home</title><!-- REPLACE title as what u want -->
