--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
   <title>Dining</title><!-- REPLACE title as what u want -->
 </head>
-<body style="background-color: #FFFFF0;">
+<body style="background-color: #FFFFFF;">
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkboxbutton">
