--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -18,14 +18,14 @@
   
   <title>Home</title><!-- REPLACE title as what u want -->
 </head>
-<body style="background-color: #FFFFF0;">
+<body>
       <nav>
           <input type="checkbox" id="check">
           <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
           </label>
           <a href="Homepage.html" class="tryhover">
-          <label class ="logo">Reza Resorts</label>
+          <label class ="logo">Reza Resort</label>
         </a>
           <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
