--- a/UX Offical/ResturantPage.html
+++ b/UX Offical/ResturantPage.html
@@ -20,7 +20,9 @@
         <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
         </label>
+        <a href="Homepage.html">
         <label class ="logo">Reza Resort</label>
+        </a>
         <ul>
           <li><a class="colorchange" href="Homepage.html">Home</a></li>
           <li><a class="colorchange" href="about us.html">about</a></li>
