--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -159,9 +159,9 @@
 
     <div class="important_infomation">
         <h1 class="information_header">Infomation</h1>
-        <p class="information_checkin_date">Check-In date: *insert check out date</p>
-        <p class="information_checkout_date">Check-Out date: *insert check out date</p>
-        <p class="information_days_counter_date"># days, # nights</p>
+        <p class="information_checkin_date">Check-In date: 1st August 2023</p>
+        <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
+        <p class="information_days_counter_date">4 days, 4 nights</p>
     </div>
 
     <footer>
