--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -69,7 +69,7 @@
       a family adventure, or a corporate retreat, our diverse range of accommodations and 
       activities cater to all your desires.
       <br><br>
-      <button class="button"><a href="">
+      <button class="button"><a href="about us.html">
         Learn more
       </button>
     </a>
