--- a/UX Offical/Eventspage2.html
+++ b/UX Offical/Eventspage2.html
@@ -17,7 +17,7 @@
         <label for="check" class="checkboxbutton">
           <i class="fa fa-bars" style="font-size:24px; margin: 0;;"></i>
         </label>
-        <label class ="logo">The logo here</label>
+        <label class ="logo">Reza Resort</label>
         <ul>
           <li><a class="colorchange" href="Homepage.html">Home</a></li>
           <li><a class="colorchange" href="about us.html">about</a></li>
