--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -85,7 +85,7 @@
                 <p>
                     Our resort boasts a range of luxurious accommodations, from spacious suites to private villas. Each room is elegantly designed and equipped with state-of-the-art amenities to ensure your comfort and relaxation.
                 </p>
-                <a href="Premium Suite.html" class="roombutton">Learn More</a>
+                <a href="Rooms webpage.html" class="roombutton">Learn More</a>
                 </div>
             </div>
             <div class="para_2">
@@ -96,7 +96,7 @@
                 <p>
                     Indulge your taste buds at our world-class restaurants, where our talented chefs create exquisite dishes using the finest ingredients. From international cuisine to local specialties, our diverse dining options are sure to satisfy even the most discerning palate.
                 </p>
-                <a href="Premium Suite.html" class="roombutton">Learn More</a>
+                <a href="ResturantPage.html" class="roombutton">Learn More</a>
                 </div>
             </div>
             <div class="para_3">
@@ -108,7 +108,7 @@
                     Unwind and rejuvenate at our luxurious spa, where you can indulge in a variety of treatments and therapies. For those seeking adventure, our resort offers a range of recreational activities, including swimming, tennis, bowling, and more.
                 </p>
                 </div>
-                <a href="Premium Suite.html" class="roombutton">Learn More</a>
+                <a href="Facilities.html" class="roombutton">Learn More</a>
             </div>
         </div>
       </article>
