--- a/UX Offical/Facilities.html
+++ b/UX Offical/Facilities.html
@@ -52,6 +52,8 @@
     <br><br><br><br><br>
     <div id="border">
         <img id='spa' src="ImageNVideo/spa.jpg">
+        <div class="vertical-line"></div>
+
         <div id ="textpic">
             <h1 style="font-family: 'Playfair Display', serif;">Reza Spa</h1>
             <br>
@@ -63,6 +65,7 @@
     <br><br><br><br>
     <div id="border">
         <img id='jac'src="ImageNVideo/jacuzzi.jpg">
+        <div class="vertical-line"></div>
         <div id="textpic">
             <h1 style="font-family: 'Playfair Display', serif;">Jacuzzi</h1>
             <br>
@@ -74,6 +77,7 @@
     <br><br><br><br>
     <div id="border">
         <img id='gym' src="ImageNVideo/gym7.jpg">
+        <div class="vertical-line"></div>
         <div id="textpic">
             <h1 style="font-family: 'Playfair Display', serif;">Reza Fitness</h1>
             <br>
