--- a/UX Offical/Rooms webpage.html
+++ b/UX Offical/Rooms webpage.html
@@ -21,11 +21,7 @@
         <label for="check" class="checkboxbutton">
             <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
         </label>
-       
-        <a href="Homepage.html">
-        <label class ="logo">Reza Resort</label>
-       
-        </a>
+        <label class ="logo">The logo here</label>
         <ul>
             <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="about us.html">about</a></li>
