--- a/UX Offical/Sentosa Suite.html
+++ b/UX Offical/Sentosa Suite.html
@@ -21,7 +21,7 @@
             <label for="check" class="checkboxbutton">
                 <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
             </label>
-            <label class ="logo">The logo here</label>
+            <label class ="logo">Reza Resort</label>
             <ul>
                 <li><a class="colorchange" href="Homepage.html">Home</a></li>
             <li><a class="colorchange" href="about us.html">about</a></li>
