--- a/UX Offical/Rooms webpage.html
+++ b/UX Offical/Rooms webpage.html
@@ -56,7 +56,7 @@
             <img src="ImageNVideo/standard garden view room.jpg" alt="" class="roomimage">
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Garden Oasis Room</h1>
-                <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
+                <p class="roomtext">Step into a world of tranquility and natural beauty with our Garden Oasis room. French doors open to reveal lush gardens, seamlessly bringing the outdoors inside.</p>
                 <a href="Garden View Standard room.html" class="roombutton">Learn More</a>
             </div>  
         </div>
@@ -68,7 +68,7 @@
             <img src="ImageNVideo/standard seaview room.jpg" alt="" class="roomimage">
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Ocean Retreat Room</h1>
-                <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
+                <p class="roomtext">Unwind in our Ocean Retreat room with floor-to-ceiling windows and stunning ocean views. Soak up the coastal charm and let the sound of crashing waves lull you to sleep.</p>
                 <a href="Sea View Standard Room.html" class="roombutton">Learn More</a>
             </div>  
         </div>
@@ -80,7 +80,7 @@
             <img src="ImageNVideo/Premium suite.jpg" alt="" class="roomimage">
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Premium Oasis Suite</h1>
-                <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
+                <p class="roomtext">Indulge in the ultimate luxury of our Premium Oasis Suite, with plush furnishings, premium amenities, and personalized services.</p>
                 <a href="Premium Suite.html" class="roombutton">Learn More</a>
             </div>  
         </div>
@@ -92,7 +92,7 @@
             <img src="ImageNVideo/Sentosa suite.jpg" alt="" class="roomimage">
             <div class="roomheadertextcontainer">
                 <h1 class="roomheader">Sentosa Suite</h1>
-                <p class="roomtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur asperiores id ad quidem reprehenderit illum aut velit odio consectetur veritatis porro possimus ex voluptas numquam distinctio animi dolore, veniam vitae.</p>
+                <p class="roomtext">Immerse yourself in the luxury of our Sentosa Suite, with sweeping views, plush interiors, and bespoke services.</p>
                 <a href="Sentosa Suite.html" class="roombutton">Learn More</a>
             </div>  
         </div>
