--- a/UX Offical/Payment webpage 1 (Date Selection).html
+++ b/UX Offical/Payment webpage 1 (Date Selection).html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script>
+        var check_in_var = document.getElementById(check_in)
+        alert = check_in_var
+    </script>
 </head>
 <body>
 
@@ -71,7 +76,7 @@
             <p class="checkin_text_form">Check-In</p>
             
             <form action="Payment webpage 2 (Room selection).html">
-                <input type="date" class="checkin_input" required>
+                <input type="date" class="checkin_input" required id="check-in">
             
         </div>
 
