--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -118,6 +118,7 @@
         <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
         <p class="information_days_counter_date">4 days, 4 nights</p>
         <p class="information_days_selected_room">Room Selected: Ocean Retreat Room</p>
+        <p class="information_days_selected_room">Total Cost: $400</p>
     </div>
 
 
