--- a/UX Offical/Payment webpage 1 (Date Selection).html
+++ b/UX Offical/Payment webpage 1 (Date Selection).html
@@ -14,10 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script>
-        var check_in_var = document.getElementById(check_in)
-        alert = check_in_var
-    </script>
+
 </head>
 <body>
 
@@ -76,7 +73,7 @@
             <p class="checkin_text_form">Check-In</p>
             
             <form action="Payment webpage 2 (Room selection).html">
-                <input type="date" class="checkin_input" required id="check-in">
+                <input type="date" class="checkin_input" id="check_in" required >
             
         </div>
 
@@ -105,6 +102,8 @@
                   </div>
               </div> 
           </div>
+
+          <script src="JS/java_script_for payment.js"></script>
 
           <div class="part1footerright">
               <div class="insidepart1">
