--- a/UX Offical/Payment webpage 1 (Date Selection).html
+++ b/UX Offical/Payment webpage 1 (Date Selection).html
@@ -89,7 +89,9 @@
         </div>
     </div>
 
-    <script src="JS/java_script_for payment.js"></script>
+    <script src="JS/java_script_for payment.js">
+        alert("yo")
+    </script>
 
 
         
