--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -15,11 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script>
-
-
-    document.getElementById("").innerHTML=check_in_var
-
+    document.getElementById("testing_123").innerHTML="testing";
+        alert("yo")
     </script>
+
+    <script src="JS/java_script_for payment.js"></script>
+
 </head>
 <body>  
 
@@ -164,10 +165,9 @@
         <h1 class="information_header">Infomation</h1>
         <p class="information_checkin_date">Check-In date: 1st August 2023</p>
         <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
-        <p class="information_days_counter_date" id="information_days_counter_date">4 days, 4 nights</p>
+        <p class="information_days_counter_date" id="information_days_counter_dates">4 days, 4 nights</p>
+        <p id="testing_123">hello</p>
     </div>
-
-    <script src="JS/java_script_for payment.js"></script>
 
     <footer>
         <div class="section1_footer">
