--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -14,12 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script>
-    document.getElementById("testing_123").innerHTML="testing";
-        alert("yo")
-    </script>
 
-    <script src="JS/java_script_for payment.js"></script>
+        <!--<script src="JS/java_script_for payment.js"></script>
 
 </head>
 <body>  
@@ -166,8 +162,10 @@
         <p class="information_checkin_date">Check-In date: 1st August 2023</p>
         <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
         <p class="information_days_counter_date" id="information_days_counter_dates">4 days, 4 nights</p>
-        <p id="testing_123">hello</p>
+        <p id="testing_123">hello why is it not working</p>
     </div>
+
+
 
     <footer>
         <div class="section1_footer">
