--- a/UX Offical/Payment webpage 3.html
+++ b/UX Offical/Payment webpage 3.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+
+
 <body>
 
     <nav>
@@ -67,7 +68,7 @@
     
     <div class="container_guest_info_form">
         <h1 class="form_guest_info_header">Guest Infomation</h1>
-        <form action="Payment webpage 4.html" method="get" class="guest_info_form">
+        <form action="" method="get" class="guest_info_form">
             <input type="text" class="guest_info_input_fullname" placeholder="Full Name" required>
             <input type="number" class="guest_info_input_phonenumber" placeholder="Phone Number" required min="10000000" max="99999999">
             <input type="email" class="guest_info_input_email" placeholder="Email" required>
@@ -116,7 +117,6 @@
         <h1 class="information_header">Infomation</h1>
         <p class="information_checkin_date">Check-In date: 1st August 2023</p>
         <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
-        <p class="information_days_counter_date">4 days, 4 nights</p>
         <p class="information_days_selected_room">Room Selected: Ocean Retreat Room</p>
         <p class="information_days_selected_room">Total Cost: $400</p>
     </div>
