--- a/UX Offical/Resturantforms2.html
+++ b/UX Offical/Resturantforms2.html
@@ -34,7 +34,7 @@
         <div class="form_container">
             <div class="form_title">Restaurant Reservation</div>
                 <div class="content">
-                    <form onsubmit="alert('Successful Booking');">
+                    <form method="get" action="ResturantformResult.html">
                         <div class="user-details">
                             <div class = "input-box">
                                 <span class="details">Restaurant:</span>
@@ -108,8 +108,7 @@
         </div>
     </body>
     
-    <script>
-
+    <!-- <script>
         const form = document.querySelector('form');
         form.addEventListener('submit',(e)=>{
             e.preventDefault();
@@ -119,7 +118,7 @@
                 console.log(item);
             }
         })
-    </script>
+    </script> -->
     <div class="footer-container">
         <footer>
             <div class="section1_footer">
