--- a/UX Offical/Resturantforms2.html
+++ b/UX Offical/Resturantforms2.html
@@ -87,17 +87,17 @@
 
                             <div class = "input-box">
                                 <span class="details">Full Name:</span>
-                                <input type="text" placeholder="Enter Full Name" required>
+                                <input type="text" id = "FullName" placeholder="Enter Full Name" required>
                             </div>
 
                             <div class = "input-box">
                                 <span class="details">Email:</span>
-                                <input type="email" placeholder="john@gmail.com" required>
+                                <input type="email" id = "Email" placeholder="john@gmail.com" required>
                             </div>
                             
                             <div class = "input-box">
                                 <span class="details">Phone Number:</span>
-                                <input type="number" placeholder="+65 xxxx xxxx" required>
+                                <input type="number" id = "PhoneNumber" placeholder="+65 xxxx xxxx" required>
                             </div>
                         </div> 
                         <div class="submit_button">
