--- a/UX Offical/about us.html
+++ b/UX Offical/about us.html
@@ -115,7 +115,7 @@
       <hr class="gapline2">
       <article class="container2">
         <div class="submain">
-            <p>For any further information about our website, please visit our FAQ page.</p>
+            <p class="stmain">For any further information about our website,<br> please visit our FAQ page.</p>
             <a href="FAQ.html" class="roombutton">FAQ</a>
         </div>
       </article>
