--- a/UX Offical/Homepage.html
+++ b/UX Offical/Homepage.html
@@ -88,9 +88,9 @@
         
         <img src="ImageNVideo/weddingImg.jpg" style="width: 100%;">
         <div class="minicontainer">
-          <h3 style="color: black;"><b>Wedding services</b></h3> 
+          <h3 style="color: black;font-family: 'Playfair Display', serif;"><b>Wedding services</b></h3> 
           <hr>
-          <p style="color: black;">Click to find out more</p> 
+          <p style="color: black; font-family: 'Open Sans',sans-serif;">Click to find out more</p> 
         </a>
         </div>
     </div>
@@ -98,9 +98,9 @@
       <a href="Eventspage2.html">
       <img src="ImageNVideo/concertImg.jpg" style="width: 100%;">
       <div class="minicontainer">
-        <h3 style="color: black;"><b>Hosting concerts and parties</b></h3> 
+        <h3 style="color: black;font-family: 'Playfair Display', serif;"><b>Hosting concerts and parties</b></h3> 
           <hr>
-          <p style="color: black;">Click to find out more</p> 
+          <p style="color: black;font-family: 'Open Sans',sans-serif;">Click to find out more</p> 
       </div>
       </a>
       </div>
@@ -109,9 +109,9 @@
         <img src="ImageNVideo/anotherSpaimg.jpeg" style="width: 100%;">
       </a>
         <div class="minicontainer">
-          <h3><b>Spa and Wellness</b></h3> 
+          <h3 style="font-family: 'Playfair Display', serif;"><b>Spa and Wellness</b></h3> 
           <hr>
-          <p>Click to find out more</p> 
+          <p style="font-family: 'Open Sans',sans-serif;">Click to find out more</p> 
         </div>   
     </div>
   </div>
