--- a/UX Offical/FAQ.html
+++ b/UX Offical/FAQ.html
@@ -1,1 +1,71 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link rel="stylesheet" href="CSS/NewNavbar.css">
+  <link rel="stylesheet" href="CSS/faq.css">
+  <link rel="stylesheet" href="CSS/Footer.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&family=Playfair+Display&family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <title>FAQ</title>
+</head>
+<body style="background-color: #FFFFFF;">
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkboxbutton">
+            <i class="fa fa-bars" style="font-size:24px; margin-top: 30px;"></i>
+        </label>
+        <a href="Homepage.html">
+        <label class ="logo">Reza Resort</label>
+        </a>
+        <ul>
+          <li><a class="colorchange" href="Homepage.html">Home</a></li>
+          <li><a class="colorchange" href="about us.html">about</a></li>
+          <li><a class="colorchange" href="Rooms webpage.html">rooms</a></li>
+          <li><a class="colorchange" href="ResturantPage.html">Dining</a></li>
+          <li><a class="colorchange" href="Facilities.html">facilities</a></li>
+          <li><a href="Payment webpage 1 (Date Selection).html" class="navbutton">Book now</a></li>
+        </ul>
+    </nav>
+    <form>
+        
+    </form>
+    <footer>
+        <div class="section1_footer">
+          <div class="part1footerleft">
+              <div class="insidepart1">
+                  <h1 class="title">Contact Us</h1>
+                  <div class="contact_container">
+                  <a href="" class="contactlinks"><p class="contacttextfirst">Company Infomation</p></a>
+                  <a href="" class="contactlinks"><p class="contacttext">FAQs</p></a>
+                  <a href="" class="contactlinks"><p class="contacttext">Contact Us</p></a>
+                  </div>
+              </div> 
+          </div>
+
+          <div class="part1footerright">
+              <div class="insidepart1">
+                  <h1 class="title">Socials</h1>
+                  <div class="socialicon_container">
+                    <a href="https://twitter.com/AimanReza06" class="mainsocialmedia"><img src="ImageNVideo/Twitter.jpg" alt="" class="socialmediaiconfirst"></a>
+                    <a href="https://www.facebook.com/TheStraitsTimes?mibextid=LQQJ4d" class="mainsocialmedia"><img src="ImageNVideo/Facebook.jpg" alt="" class="socialmediaicon"></a>
+                    <a href="https://www.instagram.com/righthand_aiman/" class="mainsocialmedia"><img src="ImageNVideo/Instagram.jpg" alt=""class="socialmediaicon"></a>
+                  </div>  
+              </div>
+          </div>
+        </div>
+
+        <div class="part2footer">
+            <a href=""class="copyright"><p class="copyrighttext">© 2023 Reza Resort. All rights reserved</p></a>
+        </div>
+    </footer>
+  <script src="JS/Resturant.js"></script>
+</body>
+</html>
